crates/mtek-compiler/src/syntax/lexer.rs
//! The lexer: source text to tokens, trivia and lexical diagnostics
//! (`spec/grammar.ebnf` section 1, `spec/language.md` sections 1 and 2,
//! `spec/diagnostics.md` section 5.0).
//!
//! The lexer is total: it never panics, whatever the text, and after any
//! error it carries on with the next character, so the token stream always
//! ends with [`TokenKind::Eof`]. What it reports (the lexical catalogue
//! `E0003`-`E0025`) and what it deliberately leaves to later stages:
//!
//! * Reserved words lex as identifiers flagged `reserved`; `E0013` is the
//!   parser's and resolver's to report, where the word is used as a name.
//! * `_` alone is [`TokenKind::Underscore`]; `E0012` belongs to the resolver.
//! * Bitwise operators lex as tokens; `E1901` belongs to the parser.
//! * Invalid UTF-8 (`E0001`), a misplaced byte-order mark (`E0002`) and an
//!   oversized file (`E0004`) are rejected earlier by the
//!   [`SourceMap`](crate::source::SourceMap). [`lex_str`] still answers a
//!   misplaced mark with `E0002` so that it is total on every `&str`.
//! * A dangling doc comment (`W0007`) depends on what follows and is the
//!   parser's to report; the lexer only marks doc comments in the trivia.
//!
//! A literal that received a diagnostic carries
//! [`TokenValue::Malformed`], so that the parser does not report it again.

use crate::diagnostics::{Code, Diagnostic};
use crate::source::{FileId, SourceFile, Span};

use super::token::{
    Token, TokenKind, TokenValue, Trivia, TriviaItem, TriviaKind, is_reserved_word, keyword_kind,
};

/// A replacement the lexer recorded for a malformed float literal (`E0022`):
/// writing `replacement` over `span` yields the float the author meant
/// (`1.` -> `1.0`, `.5` -> `0.5`, `1e3` -> `1.0e3`).
///
/// The lexer cannot validate the edit: `spec/diagnostics.md` section 6 only
/// allows attaching an edit after the file was re-checked with it applied.
/// The driver that can do that looks the fix up by the span of the `E0022`
/// diagnostic and attaches it as a suggested edit if the re-check passes.
#[derive(Clone, PartialEq, Eq, Debug)]
pub struct FloatFix {
    pub span: Span,
    pub replacement: String,
}

/// Everything the lexer produces for one file.
#[derive(Clone, PartialEq, Debug)]
pub struct Lexed {
    /// The tokens, in source order, ending with exactly one `Eof`.
    pub tokens: Vec<Token>,
    /// Comments, keyed by the index of the following token.
    pub trivia: Trivia,
    /// Lexical diagnostics in source order.
    pub diagnostics: Vec<Diagnostic>,
    /// The recorded replacements of `E0022` diagnostics, in source order.
    pub float_fixes: Vec<FloatFix>,
}

/// Lex a validated source file. Lexing starts after a leading byte-order
/// mark; every span refers to the file as stored.
#[must_use]
pub fn lex(file: &SourceFile) -> Lexed {
    lex_str(file.id(), file.text())
}

/// Lex `text` as the content of file `file`. A leading byte-order mark is
/// skipped (it is permitted and ignored, `spec/language.md` 1.1); offsets
/// count from the start of `text`.
#[must_use]
pub fn lex_str(file: FileId, text: &str) -> Lexed {
    Lexer {
        file,
        text,
        bytes: text.as_bytes(),
        pos: 0,
        tokens: Vec::new(),
        trivia: Trivia::default(),
        diagnostics: Vec::new(),
        float_fixes: Vec::new(),
    }
    .run()
}

/// Which part of a float literal is missing (`E0022`): the variant names the
/// missing part.
#[derive(Clone, Copy)]
enum FloatForm {
    /// `1.`: nothing after the point.
    Fraction,
    /// `.5`: nothing before the point.
    Integer,
    /// `1e3`: an exponent without a point.
    Point,
}

struct Lexer<'a> {
    file: FileId,
    text: &'a str,
    bytes: &'a [u8],
    pos: usize,
    tokens: Vec<Token>,
    trivia: Trivia,
    diagnostics: Vec<Diagnostic>,
    float_fixes: Vec<FloatFix>,
}

impl<'a> Lexer<'a> {
    fn run(mut self) -> Lexed {
        if self.text.starts_with('\u{feff}') {
            self.pos = '\u{feff}'.len_utf8();
        }
        while let Some(byte) = self.byte(0) {
            match byte {
                b' ' | b'\t' | b'\n' => self.pos += 1,
                b'\r' => self.carriage_return(),
                b'/' => self.slash(),
                b'"' => self.string(),
                b'#' => self.color(),
                b'0'..=b'9' => self.number(),
                b'.' => self.dot(),
                b'A'..=b'Z' | b'a'..=b'z' | b'_' => self.ident(),
                0x80..=0xFF => self.non_ascii(),
                _ => self.punctuation(byte),
            }
        }
        let end = self.text.len();
        self.tokens.push(Token {
            kind: TokenKind::Eof,
            span: self.span(end, end),
            value: TokenValue::None,
        });
        Lexed {
            tokens: self.tokens,
            trivia: self.trivia,
            diagnostics: self.diagnostics,
            float_fixes: self.float_fixes,
        }
    }

    // ----- cursor helpers -------------------------------------------------

    /// The byte `offset` bytes ahead of the cursor.
    fn byte(&self, offset: usize) -> Option<u8> {
        self.bytes.get(self.pos.checked_add(offset)?).copied()
    }

    /// The character at the cursor. The cursor is always on a character
    /// boundary, because it only advances by whole characters or over ASCII.
    fn char_here(&self) -> Option<char> {
        self.text.get(self.pos..)?.chars().next()
    }

    fn slice(&self, start: usize, end: usize) -> &'a str {
        self.text.get(start..end).unwrap_or("")
    }

    fn span(&self, start: usize, end: usize) -> Span {
        Span::new(self.file, to_offset(start), to_offset(end))
    }

    fn push(&mut self, kind: TokenKind, start: usize, value: TokenValue) {
        let span = self.span(start, self.pos);
        self.tokens.push(Token { kind, span, value });
    }

    fn report(&mut self, diagnostic: Diagnostic) {
        self.diagnostics.push(diagnostic);
    }

    fn trivia(&mut self, kind: TriviaKind, start: usize) {
        let item = TriviaItem {
            kind,
            span: self.span(start, self.pos),
            next_token: self.tokens.len(),
        };
        self.trivia.push(item);
    }

    fn skip_digits(&mut self) {
        while self.byte(0).is_some_and(|b| b.is_ascii_digit()) {
            self.pos += 1;
        }
    }

    /// Byte length of the identifier-continue character at the cursor: an
    /// ASCII letter, digit or `_`, or a non-ASCII alphanumeric character
    /// (which is reported as `E0010` wherever it ends up in a name).
    fn ident_continue_len(&self) -> Option<usize> {
        let byte = self.byte(0)?;
        if byte.is_ascii_alphanumeric() || byte == b'_' {
            return Some(1);
        }
        if byte >= 0x80 {
            let c = self.char_here()?;
            if c.is_alphanumeric() {
                return Some(c.len_utf8());
            }
        }
        None
    }

    /// Consume identifier-continue characters; true if any was non-ASCII.
    fn skip_ident_run(&mut self) -> bool {
        let mut non_ascii = false;
        while let Some(len) = self.ident_continue_len() {
            non_ascii |= len > 1;
            self.pos += len;
        }
        non_ascii
    }

    // ----- whitespace and invalid characters ------------------------------

    fn carriage_return(&mut self) {
        if self.byte(1) != Some(b'\n') {
            self.report_lone_cr(self.pos);
        }
        self.pos += 1;
    }

    fn report_lone_cr(&mut self, at: usize) {
        let diagnostic = Diagnostic::new(
            Code::E0003,
            "Carriage return without a following line feed; line endings are `\\n` or `\\r\\n`.",
        )
        .at(self.span(at, at + 1))
        .help("replace the carriage return with a line feed (`\\n`)");
        self.report(diagnostic);
    }

    fn non_ascii(&mut self) {
        let Some(c) = self.char_here() else {
            // Not reachable on a `&str`; advance so the loop always ends.
            self.pos += 1;
            return;
        };
        if c.is_alphanumeric() {
            self.ident();
        } else if c == '\u{feff}' {
            let span = self.span(self.pos, self.pos + c.len_utf8());
            let diagnostic = Diagnostic::new(
                Code::E0002,
                format!(
                    "Byte-order mark at byte {}; it is only allowed at the start of the file.",
                    self.pos
                ),
            )
            .at(span);
            self.report(diagnostic);
            self.pos += c.len_utf8();
        } else {
            self.invalid_char(c);
        }
    }

    /// `E0005`: a character that cannot start any token. It produces no token.
    fn invalid_char(&mut self, c: char) {
        let span = self.span(self.pos, self.pos + c.len_utf8());
        let code_point = format!("U+{:04X}", u32::from(c));
        let diagnostic = if c.is_whitespace() || c.is_control() {
            Diagnostic::new(
                Code::E0005,
                format!(
                    "Whitespace or control character {code_point} is not allowed outside strings and comments."
                ),
            )
            .help("separate tokens with a space (U+0020), a tab or a line break")
        } else {
            Diagnostic::new(
                Code::E0005,
                format!(
                    "Character {} is not part of the Mtek syntax.",
                    describe_char(c)
                ),
            )
        };
        self.report(diagnostic.at(span));
        self.pos += c.len_utf8();
    }

    // ----- identifiers, keywords --------------------------------------------

    fn ident(&mut self) {
        let start = self.pos;
        let non_ascii = self.skip_ident_run();
        let word = self.slice(start, self.pos);
        let span = self.span(start, self.pos);
        if non_ascii {
            let diagnostic = Diagnostic::new(
                Code::E0010,
                format!("Identifier `{word}` contains non-ASCII characters."),
            )
            .at(span)
            .note("Unicode identifiers are not supported in v0.1");
            self.report(diagnostic);
            self.push(
                TokenKind::Ident,
                start,
                TokenValue::Ident { reserved: false },
            );
        } else if word == "_" {
            self.push(TokenKind::Underscore, start, TokenValue::None);
        } else if let Some(kind) = keyword_kind(word) {
            self.push(kind, start, TokenValue::None);
        } else {
            if word.starts_with("__") {
                let diagnostic = Diagnostic::new(
                    Code::E0011,
                    format!(
                        "Identifier `{word}` starts with two underscores, which are reserved for generated code."
                    ),
                )
                .at(span);
                self.report(diagnostic);
            }
            let reserved = is_reserved_word(word);
            self.push(TokenKind::Ident, start, TokenValue::Ident { reserved });
        }
    }

    // ----- comments ---------------------------------------------------------

    fn slash(&mut self) {
        match self.byte(1) {
            Some(b'/') => self.line_comment(),
            Some(b'*') => self.block_comment(),
            Some(b'=') => {
                let start = self.pos;
                self.pos += 2;
                self.push(TokenKind::SlashEq, start, TokenValue::None);
            }
            _ => {
                let start = self.pos;
                self.pos += 1;
                self.push(TokenKind::Slash, start, TokenValue::None);
            }
        }
    }
